tests/negative/diagnostics/english_only/input.ci
void main() {
    bool b = 1 && true;
}
